editor 컴포넌트화

--- a/src/scss/UI/_pageheader.scss
+++ b/src/scss/UI/_pageheader.scss
@@ -1,5 +1,6 @@
 .pageheader{
 	padding: 10px 17px;
+	margin : 0% 10%;
 	border-bottom: 1.8px solid $grey;
 	.pageheader-maintitle{
 		display: flex;
