--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,12 +8,30 @@
 @import './UI/pageheader';
 @import './UI/dropdown';
 @import './UI/searchinput';
-@import './UI/probleminput';
-@import './UI/problemrank';
-@import './UI/problemscore';
-@import './UI/probleminfo';
+@import './UI/Problem/probleminfo';
+@import './UI/Problem/probleminput';
+@import './UI/Problem/problemrank';
+@import './UI/Problem/problemscore';
+@import './UI/Problem/markdown';
+@import './UI/table';
+@import './UI/pagination';
+@import './UI/menubar';
+@import './UI/Question/questiontable';
+@import './UI/Question/questioninput';
+@import './UI/Question/questioninfo';
+@import './UI/Question/inputbox';
+@import './UI/Question/searchbar';
+@import './UI/labelinput';
+@import './UI/Problem/accordian';
+@import './UI/Problem/comment';
+@import './UI/Problem/editorbox';
 
 // view
 @import './view/main';
 @import './view/home';
 @import './view/problem';
+@import './view/user';
+@import './view/login';
+@import './view/question';
+@import './view/ranking';
+@import './view/submit';
