--- a/src/scss/UI/_dropdown.scss
+++ b/src/scss/UI/_dropdown.scss
@@ -1,7 +1,8 @@
 .dropdown{
-	min-width: 130px;
+	min-width: 100px;
 	.dropdown-form{
 		display: flex;
+		padding: 0% 10%;
 		width: 100%;
 		height: 100%;
 	}
