--- a/src/scss/View/_home.scss
+++ b/src/scss/View/_home.scss
@@ -1,19 +1,25 @@
 .home{
-	padding: 60px 300px 0px 300px;
 	.home-container{
 		width: 100%;
 		height: 100%;
 		.home-content{
-			width: 100%;
+			padding: 0% 10%;
+			width: 80%;
 			height: 100%;
 			.home-tableselector{
 				display: flex;
 				justify-content: space-between;
 				padding: 20px 17px;
+				.home-tableselector-start{
+					display: inline-flex;
+					align-items: center;
+					Button{
+						font-size: 17px;
+						font-weight: 400;
+					}
+				}
 				.home-dropdowns{
-					display: flex;
-					width: 100%;
-					justify-content: flex-end;
+					display: inline-flex;
 					.home-dropdown{
 						margin-left: 10px;
 					}
