테이블 중복 코드 제거

--- a/src/scss/UI/Problem/_problemrank.scss
+++ b/src/scss/UI/Problem/_problemrank.scss
@@ -6,6 +6,9 @@
         justify-content: flex-start;
         align-items: flex-end;
         margin-bottom: 1%;
+        .problemrank-search{
+            margin-right: 1%;
+        }
         .problemrank-textfield{
             width: 20%;
         }
