--- a/src/scss/UI/Question/_questioninfo.scss
+++ b/src/scss/UI/Question/_questioninfo.scss
@@ -6,6 +6,11 @@
     background-color: deepskyblue;
   }
   .code-text {
+    height: 200px;
     margin: 0% 0%;
+  }
+  .comment{
+    display: flex;
+    justify-content: center;
   }
 }
