--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,8 +23,9 @@
 @import './UI/Question/searchbar';
 @import './UI/labelinput';
 @import './UI/Problem/accordian';
-@import './UI/Problem/comment';
+@import './UI/comment';
 @import './UI/Problem/editorbox';
+@import './UI/commentform';
 
 // view
 @import './view/main';
