--- a/src/scss/UI/Question/_inputbox.scss
+++ b/src/scss/UI/Question/_inputbox.scss
@@ -2,17 +2,15 @@
   padding: 1% 0%;
   width: 100%;
   display: flex;
+  justify-content: flex-start;
   align-items: center;
   .input-content {
-    margin-left: 12%;
+    margin-left: 120px;
   }
   .title {
     font-size: 1.2rem;
     font-weight: bold;
     position: absolute;
     left: 150px;
-  }
-  .input-drop {
-    margin-left: 11%;
   }
 }
