--- a/src/scss/UI/Question/_questioninput.scss
+++ b/src/scss/UI/Question/_questioninput.scss
@@ -1,10 +1,9 @@
 .question-input {
-  padding: 2% 0%;
+  padding-top: 2%;
   width: 100%;
-  display: flex;
   .question-text {
     justify-content: center;
-    padding: 3% 2%;
+    padding:2% 2%;
   }
   .btn {
     margin-left: auto;
