--- a/src/scss/UI/_labelinput.scss
+++ b/src/scss/UI/_labelinput.scss
@@ -4,10 +4,12 @@
 	justify-content: flex-start;
 	align-items: center;
 	.labelinput-label{
-		font-size: 24px;
-		margin-right: 15px;
+		font-size: 1.2rem;
+		font-weight: bold;
+		position: absolute;
+    	left: 150px;
 	}
 	.labelinput-input{
-		flex: 1;
+		margin-left: 120px;
 	}
 }
