--- a/src/scss/View/_submit.scss
+++ b/src/scss/View/_submit.scss
@@ -1,4 +1,4 @@
-.submit{
+.submit {
 	.submit-container {
 		width: 100%;
 		height: 100%;
@@ -6,8 +6,29 @@
 			padding: 0% 10%;
 			width: 80%;
 			height: 100%;
-			.submit-info{
-				padding: 20px 17px;
+			.submit-info {
+				padding: 2% 0%;
+				width: 100%;
+			}
+			.submit-form{
+				display: flex;
+				width: 100%;
+				flex-direction: row;
+				.submit-text {
+					width: 49%;
+					margin-right: 0.5%;
+				}
+				.submit-viewer{
+					width: 49%;
+					height: 70vh;
+					border: 1px solid $light-grey;
+					overflow-y: scroll;
+					padding: 0% 1%;
+				}
+			}
+			.btn {
+				margin-left: auto;
+				margin-right: 2%;
 			}
 		}
 	}
