--- a/src/scss/View/_home.scss
+++ b/src/scss/View/_home.scss
@@ -19,6 +19,9 @@
 						padding: 3px;
 						margin: 0px 5px;
 					}
+					.page-label{
+						margin-right: 6px;
+					}
 				}
 				.home-dropdowns{
 					display: flex;
