--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,8 @@
 @import './UI/comment';
 @import './UI/Problem/editorbox';
 @import './UI/commentform';
+@import './UI/usermenu';
+@import './UI/useredit';
 
 // view
 @import './view/main';
