--- a/src/scss/UI/Question/_questiontable.scss
+++ b/src/scss/UI/Question/_questiontable.scss
@@ -18,7 +18,7 @@
       &:hover,
       &:active,
       &:focus {
-        border-bottom: 1px solid rgba(13, 13, 155, 0.829);
+        border-bottom: 1px solid black;
       }
     }
   }
