--- a/src/scss/UI/_pagination.scss
+++ b/src/scss/UI/_pagination.scss
@@ -2,17 +2,25 @@
 	display: inline-flex;
 	.pagination-button{
 		margin-right: 10px;
-		button {
-			width: 40px;
-			height: 40px;
-			border-radius: 5px;
-			border: 0;
-			font-size: 16px;
+		width: 40px;
+		height: 40px;
+		border-radius: 5px;
+		border: 0;
+		font-size: 16px;
+		&:hover, &:active, &:focus{
+			outline: none;
+		}
+		&.not-disabled {
 			&:hover, &:active, &:focus{
+				cursor: pointer;
 				background-color: #3498db;
-				outline: none;
 				color: white;
 			}
+		}
+		&.selected{
+			cursor: pointer;
+			background-color: #3498db;
+			color: white;
 		}
 	}
 }
