--- a/src/scss/UI/_table.scss
+++ b/src/scss/UI/_table.scss
@@ -20,6 +20,13 @@
 		font-size: 16px;
 		border-right: 1px solid $grey;
 		padding: 5px 0px;
+		.linkcell {
+			&:hover,
+			&:active,
+			&:focus {
+			  border-bottom: 1px solid black;
+			}
+		  }
 	  }
 	}
   }
